--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,8 +14,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" routerLink="products">Ürünler</a>
-        <a class="nav-link" href="#" routerLink="orders">Siparişler</a>
+        <a class="nav-link active" aria-current="page" routerLink="products" routerLinkActive="active">Ürünler</a>
+        <a class="nav-link" href="#" routerLinkActive="active" routerLink="orders">Siparişler</a>
         <a class="nav-link" href="#">Pricing</a>
         <a class="nav-link disabled">Disabled</a>
       </div>
