--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -4,33 +4,9 @@
   <div class="row">
     <div class="col-sm-7">
       <h1>Ürünler</h1>
+      <app-product-card *ngFor="let item of products" [product]="item"></app-product-card>
 
-      <div *ngFor="let product of products" class="product">
-        <img [src]="product.imagePath" />
-        <div class="product-name">
-          {{ product.name }}
-        </div>
-        <div class="product-price">
-          {{ product.price }}
-        </div>
-        <div
-          class="quantity-bar d-flex justify-content-between align-items-center mt-2"
-        >
-          <button
-            (click)="deleteAmountBasket(product)"
-            class="btn btn-sm btn-danger"
-          >
-            -
-          </button>
-          <span>{{ product.quantity > 0 ? product.quantity : "-" }}</span>
-          <button
-            (click)="addAmountBasket(product)"
-            class="btn btn-sm btn-success"
-          >
-            +
-          </button>
-        </div>
-      </div>
+
     </div>
     <div class="col-sm-5">
       <h1>Sepetim</h1>
