Message found added

--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -9,12 +9,15 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let order of orders; let i = index;">  <!---This index internal result-->
-      <td>{{i + 1}}</td>
-      <td>{{order.count}}</td>
-      <td>{{order.cost}}</td>
+    <tr *ngFor="let order of orders; let i = index">
+      <!---This index internal result-->
+      <td>{{ i + 1 }}</td>
+      <td>{{ order.count }}</td>
+      <td>{{ order.cost }}</td>
     </tr>
   </tbody>
 </table>
 
-
+<div class="aler alert-danger" *ngIf="orders.length == 0">
+  Ürününüz bulunmamaktadır
+</div>
