--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,39 +1,47 @@
-
-
-
-  <div class="row">
-    <div class="col-sm-7">
-      <h1>Ürünler</h1>
-      <app-product-card *ngFor="let item of products" [product]="item"></app-product-card>
-
-
-    </div>
-    <div class="col-sm-5">
-      <h1>Sepetim</h1>
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Ürün</th>
-            <th>Miktar</th>
-            <th>Fiyat</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let item of basket">
-            <td>{{ item.name }}</td>
-            <td>{{ item.quantity }}</td>
-            <td>{{ item.price }}</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr class="total">
-            <td>Toplam Ücret</td>
-            <td>{{ getTotalQuantity() }}</td>
-            <td>{{ getTotalAmount() }}</td>
-          </tr>
-        </tfoot>
-      </table>
-      <button class="btn btn-success" (click)="createOrder()" routerLink="/orders">Sipariş Oluştur</button>
-    </div>
+<div class="row">
+  <div class="col-sm-7">
+    <h1>Ürünler</h1>
+    <app-product-card
+      *ngFor="let item of products"
+      [product]="item"
+    ></app-product-card>
   </div>
+  <div class="col-sm-5">
+    <h1>Sepetim</h1>
+    <div class="alert alert-warning" *ngIf="basket.length == 0">
+      Sepette Ürün Bulunmamaktadır
+    </div>
 
+    <table class="table table-hover" *ngIf="basket.length > 0">
+      <thead>
+        <tr>
+          <th>Ürün</th>
+          <th>Miktar</th>
+          <th>Fiyat</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of basket">
+          <td>{{ item.name }}</td>
+          <td>{{ item.quantity }}</td>
+          <td>{{ item.price }}</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr class="total">
+          <td>Toplam Ücret</td>
+          <td>{{ getTotalQuantity() }}</td>
+          <td>{{ getTotalAmount() }}</td>
+        </tr>
+      </tfoot>
+    </table>
+
+    <button
+      class="btn btn-success"
+      (click)="createOrder()"
+      routerLink="/orders"
+    >
+      Sipariş Oluştur
+    </button>
+  </div>
+</div>
